[gd_scene load_steps=8 format=3 uid="uid://cj5cpdw7b3ur"]

[ext_resource type="Script" path="res://scene2/main2.gd" id="1_fpsgp"]
[ext_resource type="PackedScene" uid="uid://xik1ylyfyhjv" path="res://LEVEL/level.tscn" id="1_mf8is"]
[ext_resource type="PackedScene" uid="uid://dral5p02h0pg4" path="res://player/character.tscn" id="2_67vxf"]
[ext_resource type="PackedScene" uid="uid://c1ssecgw1hh58" path="res://bg 3/forestBackground.tscn" id="4_3b4fr"]
[ext_resource type="PackedScene" uid="uid://bce5oqsikunf5" path="res://UI/canvas_layer.tscn" id="5_uu7ux"]
[ext_resource type="PackedScene" uid="uid://32at5gmpl5bv" path="res://enemies/enemy1.tscn" id="6_5itfe"]
[ext_resource type="AudioStream" uid="uid://dv34ya86fyd4y" path="res://music/Heroic Military Background Music - RocaMusic.mp3" id="7_pxril"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_fpsgp")
metadata/_edit_vertical_guides_ = [-1929.0, 4126.0]
metadata/_edit_horizontal_guides_ = [-86.0]

[node name="Level" parent="." instance=ExtResource("1_mf8is")]
position = Vector2(-468, 85)

[node name="Character" parent="." instance=ExtResource("2_67vxf")]
position = Vector2(677, 586)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Character"]
position = Vector2(0, -104.5)
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(677, 377)
scale = Vector2(2, 2)
limit_left = -1930
limit_top = -86
limit_right = 4118
limit_bottom = 1053
position_smoothing_enabled = true

[node name="Projectiles" type="Node" parent="."]

[node name="forestBackground" parent="." instance=ExtResource("4_3b4fr")]

[node name="CanvasLayer" parent="." instance=ExtResource("5_uu7ux")]

[node name="Enemy2" parent="." instance=ExtResource("6_5itfe")]
modulate = Color(1, 0.0627451, 0.12549, 1)
position = Vector2(-535, 503)

[node name="Enemy6" parent="." instance=ExtResource("6_5itfe")]
modulate = Color(1, 0.0627451, 0.12549, 1)
position = Vector2(-1837, 528)

[node name="Enemy7" parent="." instance=ExtResource("6_5itfe")]
modulate = Color(1, 0.0627451, 0.12549, 1)
position = Vector2(1853, 499)

[node name="Enemy4" parent="." instance=ExtResource("6_5itfe")]
modulate = Color(1, 0.0627451, 0.12549, 1)
position = Vector2(1446, 484)

[node name="Enemy5" parent="." instance=ExtResource("6_5itfe")]
modulate = Color(1, 0.0627451, 0.12549, 1)
position = Vector2(3762, 434)

[node name="Enemy8" parent="." instance=ExtResource("6_5itfe")]
modulate = Color(1, 0.0627451, 0.12549, 1)
position = Vector2(3129, 425)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pxril")
autoplay = true

[connection signal="shot" from="Character" to="." method="_on_character_shot"]
[connection signal="dead_count" from="Enemy2" to="." method="_on_enemy_2_dead_count"]
[connection signal="dead_count" from="Enemy6" to="." method="_on_enemy_6_dead_count"]
[connection signal="dead_count" from="Enemy7" to="." method="_on_enemy_7_dead_count"]
[connection signal="dead_count" from="Enemy4" to="." method="_on_enemy_4_dead_count"]
[connection signal="dead_count" from="Enemy5" to="." method="_on_enemy_5_dead_count"]
[connection signal="dead_count" from="Enemy8" to="." method="_on_enemy_8_dead_count"]
